# smart_car_dual_fusion

./: .gitignore  README.md  技术报告.md
src/three_wheel_camera_line_follower/: CMakeLists.txt  README.md  package.xml
src/three_wheel_camera_line_follower/config/: camera_line_follower.rviz  camera_line_follower.yaml
src/three_wheel_camera_line_follower/launch/: demo.launch  gazebo_camera_line_follower.launch  rviz_camera_line_follower.launch
src/three_wheel_camera_line_follower/scripts/: camera_dashboard_node.py  camera_line_detector_node.py  camera_line_follower_node.py  camera_synthetic_node.py  camera_tuner_gui_node.py  camera_tuner_web_node.py  line_sensor_node.py  line_visualizer_node.py  make_line_track_world.py  sensor_fusion_node.py  track_utils.py
src/three_wheel_camera_line_follower/urdf/: three_wheel_camera_car.urdf.xacro
src/three_wheel_camera_line_follower/worlds/: line_track_camera.world
